did some changes

--- a/hack-iot/index.html
+++ b/hack-iot/index.html
@@ -190,7 +190,7 @@
         </div>
     </div>
     <p class="end">
-        Copyright Reserved &copy; 2023 coding with sonal Youtube channel coming soon
+        Copyright Reserved &copy; Faltu team
     </p>
 </footer>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
